# iWorkParser

./: .gitignore  CMakeLists.txt  Document.iwa  LICENSE  README.md  vcpkg.json
proto/: KNArchives.pb.cc  KNArchives.pb.h  KNCommandArchives.pb.cc  KNCommandArchives.pb.h  TNArchives.pb.cc  TNArchives.pb.h  TNCommandArchives.pb.cc  TNCommandArchives.pb.h  TPArchives.pb.cc  TPArchives.pb.h  TPCommandArchives.pb.cc  TPCommandArchives.pb.h  TSAArchives.pb.cc  TSAArchives.pb.h  TSCEArchives.pb.cc  TSCEArchives.pb.h  TSCH3DArchives.pb.h  TSCHArchives.Common.pb.cc  TSCHArchives.Common.pb.h  TSCHArchives.GEN.pb.cc  TSCHArchives.GEN.pb.h  TSCHArchives.pb.cc  TSCHArchives.pb.h  TSCHCommandArchives.pb.cc  TSCHCommandArchives.pb.h  TSCHPreUFFArchives.pb.cc  TSCHPreUFFArchives.pb.h  TSDArchives.pb.cc  TSDArchives.pb.h  TSDCommandArchives.pb.cc  TSDCommandArchives.pb.h  TSKArchives.pb.cc  TSKArchives.pb.h  TSPArchiveMessages.pb.h  TSPDatabaseMessages.pb.h  TSPMessages.pb.cc  TSPMessages.pb.h  TSSArchives.pb.cc  TSSArchives.pb.h  TSTArchives.pb.cc  (+9 more)
proto/Source/: TSCHArchives.proto
src/: TSPArchiveMessages.pb.cc  iworks_parser.cpp  util.cpp  util.hpp
